# kubernetes-nginx

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
base/: urls.py  views.py
base/templates/: index.html
nginx/: Dockerfile  nginx.conf
scripts/: run.sh
setup/: settings.py  urls.py
