[tool.poetry]
name = "kubernetes-nginx"
version = "0.1.0"
description = ""
authors = ["Danilo Costa <danilo.v.barbosa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
